--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.cuerpo {
+.mandoIzq {
   background-color: aqua;
   height: 250px;
   width: 90px;
@@ -8,14 +8,14 @@
   justify-content: center;
   align-items: center;
 }
-.elements {
+.pantalla {
   width: 350px;
   height: 250px;
   background-color: black;
   border-radius: 0.5em;
   display: flex;
 }
-.cuerpo2 {
+.MandoDer {
   width: 90px;
   height: 250px;
   background-color: red;
@@ -24,7 +24,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  
 }
 .switch {
   display: flex;
@@ -33,7 +32,11 @@
   align-items: center;
   height: 100vh;
 }
-
+.cajaCruceta {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .cruceta {
   width: 1em;
   height: 1em;
@@ -53,7 +56,7 @@
   border-radius: 0.1em;
 }
 
-.boton{
+.boton {
   width: 1.5em;
   height: 1.5em;
   background-color: black;
@@ -63,12 +66,12 @@
   align-items: center;
   justify-content: center;
 }
-#centrobotones{
+#centrobotones {
   height: 4.5em;
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content:space-between;
+  justify-content: space-between;
 }
 .gif {
   background-image: url("https://media.giphy.com/media/2YtXbgeiiOEbBC1OCX/giphy.gif");
@@ -78,4 +81,12 @@
   min-height: 150px;
   min-width: 94%;
   border: solid black 10px;
+}
+.joystick {
+  height: 2em;
+  width: 2em;
+  background-color: black;
+  border-radius: 100%;
+  display: flex;
+  justify-content: flex-end;
 }
